20241126 購買申請登録とファイル添付 bug 修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
@@ -39,7 +39,7 @@
                                 id="idSmartForm"
                                 app:defaultCheckBoxDisplayBehaviour="YesNo"
                                 app:defaultDropDownDisplayBehaviour="idAndDescription"
-                                editable="{local>/objectPageEditable}"
+                                editable="{parts:['local>/objectPageEditable','ApproveStatus','IsApprove'], formatter:'.formatter.ToggleEditable'}"
                                 editTogglable="true"
                                 title="{Name}"
                                 validationMode="Async"
