販売計画一覧

--- a/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
@@ -44,7 +44,7 @@
 		</smartFilterBar:controlConfiguration>
 	</smartFilterBar:SmartFilterBar>
     
-    <smartTable:SmartTable id="smartTable_Calc" smartVariant="__SVM01" persistencyKey="smartTable_Calc" entitySet="PaidPayCalculation"
+    <smartTable:SmartTable id="smartTable_Calc" smartVarBV  iant="__SVM01" persistencyKey="smartTable_Calc" entitySet="PaidPayCalculation"
 		smartFilterId="SFBCalculation" tableType="Table" enableExport="true" useVariantManagement="true" useTablePersonalisation="false" 
 		showRowCount="true" placeToolbarInTable="true" header="{i18n>Result}" enableAutoBinding="false" beforeExport="onBeforeExport"
 		beforeRebindTable="onBeforeRebindTable">
