--- a/mm-s4apps01/purinfomasterlist/webapp/view/Main.view.xml
+++ b/mm-s4apps01/purinfomasterlist/webapp/view/Main.view.xml
@@ -43,59 +43,10 @@
 								<smartFilterBar:ControlConfiguration index="12" id="latestofferBar" key="latestoffer" visibleInAdvancedArea="true" label="{i18n>latestoffer}"/>
 								<smartFilterBar:ControlConfiguration index="13" id="SupplierIsFixedBar" key="SupplierIsFixed" visibleInAdvancedArea="true" label="{i18n>SupplierIsFixed}"/>
 								<smartFilterBar:ControlConfiguration index="14" id="IncotermsClassificationBar" key="IncotermsClassification" visibleInAdvancedArea="true" label="{i18n>IncotermsClassification}"/>
-								<smartFilterBar:ControlConfiguration index="15" id="PlusDayBar" key="PlusDay" visibleInAdvancedArea="true" hasValueHelpDialog="false" label="{i18n>PlusDay}"/>
-								<!-- visible="false" -->
-								<smartFilterBar:ControlConfiguration index="999" key="BaseUnit" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="condition_validity_end_date" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="condition_validity_start_date" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ConditionRateValue" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ConditionScaleQuantity" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="CreatedByUser" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="Currency_plnt" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="Currency_standard" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="DeliveryLT" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="FirstSalesSpecProductGroup" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="IndustryStandardName" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="isdeleted" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ismarkedfordeletion" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="loginflag" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="MaterialPlannedDeliveryDurn" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="MaterialPriceUnitQty" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="MaximumOrderQuantity" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="MinimumPurchaseOrderQuantity" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="NetPriceAmount" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="orderpriceunittoorderunitnmrtr" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="OrganizationBPName1" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="organizationbpname1_en" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="organizationbpname1_ja" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="OwnInventoryManagedProduct" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="PriceUnitQty" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="PricingDateControl" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ProductGroup" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ProductName" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ProductOID" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="productsalesorg" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="PurchasingGroupName" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="PurchasingInfoRecordCategory" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="PurgDocOrderQuantityUnit" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="Rate" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ShippingConditionName" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="standardpurchaseorderquantity" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="SupplierCertOriginCountry" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="SupplierCertOriginRegion" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="SupplierConfirmationControlKey" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="SupplierMaterialGroup" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="SupplierSubrange" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="SupplierSubrangeName" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="TaxCode" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="Taxprice" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="UMCJPPurchasingPrice" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="UnitPrice_plnt" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="UnitPrice_standard" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="ValuationClass" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="Ztype1" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="Ztype2" visible="false"/>
-								<smartFilterBar:ControlConfiguration index="999" key="zvalue2" visible="false"/>
+								<smartFilterBar:ControlConfiguration index="15" id="PlusDayBar" key="PlusDay" visibleInAdvancedArea="true" label="{i18n>PlusDay}"/>
+
+                                <smartFilterBar:ControlConfiguration key="BaseUnit"  visible="false"  index="99"/>
+
 							</smartFilterBar:controlConfiguration>
 						</smartFilterBar:SmartFilterBar>
 					</FlexBox>
@@ -527,6 +478,18 @@
 							</table:template>
 						</table:Column>
 
+							<table:Column id="rate" width="6rem" visible="true" autoResizable="true" sortProperty="Rate" filterProperty="Rate">
+							<table:customData>
+								<core:CustomData key="p13nData" value='\{"columnKey":"Rate", "leadingProperty":"Rate", "sortProperty": "Rate", "filterProperty": "Rate"}'/>
+							</table:customData>
+							<table:label>
+								<Label text="{i18n>Rate}"/>
+							</table:label>
+							<table:template>
+								<Label text="{rate}"/>
+							</table:template>
+						</table:Column>
+
 						<!-- <table:Column id="orderpriceunittoorderunitnmrtr" width="6rem" visible="true" autoResizable="true" sortProperty="orderpriceunittoorderunitnmrtr" filterProperty="orderpriceunittoorderunitnmrtr">
 							<table:customData>
 								<core:CustomData key="p13nData" value='\{"columnKey":"orderpriceunittoorderunitnmrtr", "leadingProperty":"orderpriceunittoorderunitnmrtr", "sortProperty": "orderpriceunittoorderunitnmrtr", "filterProperty": "orderpriceunittoorderunitnmrtr"}'/>
@@ -538,18 +501,6 @@
 								<Label text="{orderpriceunittoorderunitnmrtr}"/>
 							</table:template>
 						</table:Column> -->
-
-						<table:Column id="rate" width="6rem" visible="true" autoResizable="true" sortProperty="Rate" filterProperty="Rate">
-							<table:customData>
-								<core:CustomData key="p13nData" value='\{"columnKey":"Rate", "leadingProperty":"Rate", "sortProperty": "Rate", "filterProperty": "Rate"}'/>
-							</table:customData>
-							<table:label>
-								<Label text="{i18n>Rate}"/>
-							</table:label>
-							<table:template>
-								<Label text="{Rate}"/>
-							</table:template>
-						</table:Column>
 
 						<table:Column id="latestoffer" width="7rem" visible="true" autoResizable="true" sortProperty="latestoffer" filterProperty="latestoffer">
 							<table:customData>
@@ -731,6 +682,18 @@
 							</table:template>
 						</table:Column>
 
+						<!-- <table:Column id="PlusDay" width="7rem" visible="true" autoResizable="true" sortProperty="PlusDay" filterProperty="PlusDay">
+							<table:customData>
+								<core:CustomData key="p13nData" value='\{"columnKey":"PlusDay", "leadingProperty":"PlusDay", "sortProperty": "PlusDay", "filterProperty": "PlusDay"}'/>
+							</table:customData>
+							<table:label>
+								<Label text="{i18n>PlusDay}"/>
+							</table:label>
+							<table:template>
+								<Label text="{PlusDay}"/>
+							</table:template>
+						</table:Column> -->
+
 						<table:Column id="PurchasingInfoRecordCategory" width="10rem" visible="true" autoResizable="true" sortProperty="PurchasingInfoRecordCategory" filterProperty="PurchasingInfoRecordCategory">
 							<table:customData>
 								<core:CustomData key="p13nData" value='\{"columnKey":"PurchasingInfoRecordCategory", "leadingProperty":"PurchasingInfoRecordCategory", "sortProperty": "PurchasingInfoRecordCategory", "filterProperty": "PurchasingInfoRecordCategory"}'/>
@@ -802,6 +765,8 @@
 								<Label text="{loginflag}"/>
 							</table:template>
 						</table:Column>
+
+
 					</table:columns>
 				</table:Table>
 			</smartTable:SmartTable>
