--- a/bi-s4apps01/longtermforcast/webapp/view/Report.view.xml
+++ b/bi-s4apps01/longtermforcast/webapp/view/Report.view.xml
@@ -10,17 +10,17 @@
     xmlns:core="sap.ui.core" displayBlock="true" busyIndicatorDelay="0">
             <smartfilterbar:SmartFilterBar id="reportFilter" entitySet="ZI_BI007_REPORT" smartVariant="__SVM02" persistencyKey="report02FilterPersistent" useToolbar="false">
                 <smartfilterbar:controlConfiguration>
-                    <smartfilterbar:ControlConfiguration id="sfbConfigCompanyCode" key="CompanyCode" label="{i18n>company}" /> 
+                    <smartfilterbar:ControlConfiguration id="sfbConfigCompanyCode" index="0" key="CompanyCode" label="{i18n>company}" /> 
 
-                    <smartfilterbar:ControlConfiguration id="sfbConfigFiscalYear" key="FiscalYear" label="{i18n>fiscalYear}" mandatory="mandatory" >
+                    <smartfilterbar:ControlConfiguration id="sfbConfigFiscalYear" index="1" key="BaseFiscalYear" label="{i18n>fiscalYear}" mandatory="mandatory" >
                         <smartfilterbar:customControl>
-                            <DatePicker id="sfbDPRecoveryYear" displayFormat="yyyy" valueFormat="yyyy" required="true" />
+                            <DatePicker id="sfbDPFiscalYear" displayFormat="yyyy" valueFormat="yyyy" required="true" />
                         </smartfilterbar:customControl>
                     </smartfilterbar:ControlConfiguration>
 
-                    <smartfilterbar:ControlConfiguration id="sfbConfigFiscalMonth" key="Period" label="{i18n>fiscalMonth}" mandatory="mandatory">
+                    <smartfilterbar:ControlConfiguration id="sfbConfigFiscalMonth" index="2" key="BasePeriod" label="{i18n>fiscalMonth}" mandatory="mandatory">
                         <smartfilterbar:customControl>
-                           <ComboBox id="sfbSelFiscalMonth" required="true">
+                           <ComboBox id="sfbSelFiscalMonth" required="true" change="onBaseFiscalMonthChange">
                              <items>
                                 <core:Item id="idMonth01" key="01" text="01"></core:Item>
                                 <core:Item id="idMonth02" key="02" text="02"></core:Item>
@@ -39,9 +39,36 @@
                         </smartfilterbar:customControl>
                     </smartfilterbar:ControlConfiguration> 
 
-                    <smartfilterbar:ControlConfiguration id="sfbConfigPlant" key="Plant" label="{i18n>plant}" /> 
-                    <smartfilterbar:ControlConfiguration id="sfbConfigProduct" key="Product" label="{i18n>product}" /> 
-                    <smartfilterbar:ControlConfiguration id="sfbConfigCustomer" key="Customer" label="{i18n>businessPartner}" /> 
+                    <smartfilterbar:ControlConfiguration id="sfbConfigForcastYear" index="3" key="ForcastFiscalYear" label="{i18n>forcastYear}">
+                        <smartfilterbar:customControl>
+                            <DatePicker id="sfbDPForcastYear" displayFormat="yyyy" valueFormat="yyyy" required="true" />
+                        </smartfilterbar:customControl>
+                    </smartfilterbar:ControlConfiguration>
+
+                    <smartfilterbar:ControlConfiguration id="sfbConfigForcastlMonth" index="4" key="ForcastFiscalPeriod" label="{i18n>forcastMonth}">
+                        <smartfilterbar:customControl>
+                           <MultiComboBox id="sfbSelForcastMonth" required="true">
+                             <items>
+                                <core:Item id="idForcastMonth01" key="01" text="01"></core:Item>
+                                <core:Item id="idForcastMonth02" key="02" text="02"></core:Item>
+                                <core:Item id="idForcastMonth03" key="03" text="03"></core:Item>
+                                <core:Item id="idForcastMonth04" key="04" text="04"></core:Item>
+                                <core:Item id="idForcastMonth05" key="05" text="05"></core:Item>
+                                <core:Item id="idForcastMonth06" key="06" text="06"></core:Item>
+                                <core:Item id="idForcastMonth07" key="07" text="07"></core:Item>
+                                <core:Item id="idForcastMonth08" key="08" text="08"></core:Item>
+                                <core:Item id="idForcastMonth09" key="09" text="09"></core:Item>
+                                <core:Item id="idForcastMonth10" key="10" text="10"></core:Item>
+                                <core:Item id="idForcastMonth11" key="11" text="11"></core:Item>
+                                <core:Item id="idForcastMonth12" key="12" text="12"></core:Item>
+                             </items>
+                           </MultiComboBox>
+                        </smartfilterbar:customControl>
+                    </smartfilterbar:ControlConfiguration> 
+
+                    <smartfilterbar:ControlConfiguration id="sfbConfigPlant" key="Plant" index="5" label="{i18n>plant}" /> 
+                    <smartfilterbar:ControlConfiguration id="sfbConfigProduct" key="Product" index="6" label="{i18n>product}" /> 
+                    <smartfilterbar:ControlConfiguration id="sfbConfigCustomer" key="Customer" index="7" label="{i18n>businessPartner}" /> 
                 </smartfilterbar:controlConfiguration>
             </smartfilterbar:SmartFilterBar> 
 
