--- a/bi-s4apps01/longtermforcast/webapp/view/Report.view.xml
+++ b/bi-s4apps01/longtermforcast/webapp/view/Report.view.xml
@@ -20,7 +20,7 @@
 
                     <smartfilterbar:ControlConfiguration id="sfbConfigFiscalMonth" index="2" key="BasePeriod" label="{i18n>fiscalMonth}" mandatory="mandatory">
                         <smartfilterbar:customControl>
-                           <ComboBox id="sfbSelFiscalMonth" required="true" change="onBaseFiscalMonthChange">
+                           <ComboBox id="sfbSelFiscalMonth" required="true">
                              <items>
                                 <core:Item id="idMonth01" key="01" text="01"></core:Item>
                                 <core:Item id="idMonth02" key="02" text="02"></core:Item>
@@ -41,13 +41,13 @@
 
                     <smartfilterbar:ControlConfiguration id="sfbConfigForcastYear" index="3" key="ForcastFiscalYear" label="{i18n>forcastYear}">
                         <smartfilterbar:customControl>
-                            <DatePicker id="sfbDPForcastYear" displayFormat="yyyy" valueFormat="yyyy" required="true" />
+                            <DatePicker id="sfbDPForcastYear" displayFormat="yyyy" valueFormat="yyyy"/>
                         </smartfilterbar:customControl>
                     </smartfilterbar:ControlConfiguration>
 
                     <smartfilterbar:ControlConfiguration id="sfbConfigForcastlMonth" index="4" key="ForcastFiscalPeriod" label="{i18n>forcastMonth}">
                         <smartfilterbar:customControl>
-                           <MultiComboBox id="sfbSelForcastMonth" required="true">
+                           <MultiComboBox id="sfbSelForcastMonth" >
                              <items>
                                 <core:Item id="idForcastMonth01" key="01" text="01"></core:Item>
                                 <core:Item id="idForcastMonth02" key="02" text="02"></core:Item>
