生産計画立案プラットフォーム 新增粘贴功能

--- a/pp-s4apps01/productionplan/webapp/view/Main.view.xml
+++ b/pp-s4apps01/productionplan/webapp/view/Main.view.xml
@@ -59,6 +59,16 @@
           </OverflowToolbar>
         </smartTable:customToolbar>
         <t:Table id="ReportTable" selectionMode="MultiToggle" rowsUpdated="onUITableRowsUpdated" rowMode="Auto" enableColumnFreeze="true" paste="onPaste">
+          <t:extension>
+            <OverflowToolbar id="toolbar" style="Clear">
+              <ToolbarSpacer/>
+              <Button>
+                <dependents>
+                  <plugins.PasteProvider pasteFor="table" />
+                </dependents>
+              </Button>
+            </OverflowToolbar>
+          </t:extension>
           <t:Column id="Plant" label="{i18n>Plant}" width="4rem" sortProperty="Plant" filterProperty="Plant" visible="true" autoResizable="true">
             <t:customData>
               <core:CustomData key="p13nData" value='\{"columnKey":"Plant", "leadingProperty":"Plant", "sortProperty":"Plant", "filterProperty": "Plant"}'/>
